fix Preloader overflow

--- a/client/src/Components/Preloader/preloader.css
+++ b/client/src/Components/Preloader/preloader.css
@@ -9,7 +9,7 @@
 }
 
 .loading-h1 {
-  position: absolute;
+  position: relative;
   font-family: 'Open Sans';
   font-weight: 600;
   font-size: 12px;
@@ -37,6 +37,7 @@
   border-right: 100px solid #000;
   border-bottom: 6px solid transparent;
 }
+
 .base span:before {
   content: '';
   height: 22px;
@@ -185,6 +186,9 @@
   position: absolute;
   width: 100%;
   height: 100%;
+
+  overflow-x: hidden;
+  z-index: 1000;
 }
 .longfazers span {
   position: absolute;
